static/css/style.css
/* ... */
body {
    height: 100%;
    min-height: 100vh;
    width: 100%;
    position: relative;
    font-family: "b",  "a", sans-serif;
    background: var(--main_bg_color);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    transition: color 0.1s ease;
    color: var(--main_text_color);

}

#mica-loading {
    background: radial-gradient(white, #d8eaff);
    background-size: 100%;
    background-position: center;

    height: 100%;
    width: 100%;
    position: fixed;
    z-index: 999999;
    margin-top: 0px;
    top: 0px;
    pointer-events: none;
    opacity: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}



#mica-loading-center {
    height: 150px;
    width: 150px;
    position: relative;
    border-radius: 50%;
    background: #472eff;

    animation: zoom 1s linear infinite;
}

@keyframes zoom {
    0% {
        transform: scale(0);
        opacity: 1;
    }

    50% {
        opacity: 0.5;
    }

    100% {
        transform: scale(1);
        opacity: 0;
    }
}




.mica-filter {
    position: fixed;
    width: 100%;
    height: 100%;
    background: var(--back_filter_color);
    backdrop-filter:  blur(var(--back_filter));
    -webkit-backdrop-filter: blur(var(--back_filter));
    z-index: -99999999;
   
}

.mica-main {
    width: 100%;
    margin: 0 auto;
    transition: transform 0.5s ease;
    max-width: 1150px;
    position: relative;
    display: flex;
    flex-direction: row;
}


.mica-left {
    overflow-y: scroll;
    width: 230px;
    height: 100vh;
    display: flex;
    padding: 0 15px;
    position: sticky;
    top: 0;
    left: 0;
    align-items: center;
    flex-direction: column;
}


.mica-left::-webkit-scrollbar {
    display: none;
}


.logo {
    flex-shrink: 0;
    width: 90%;
    position: relative;
    aspect-ratio: 1/1;
    margin-top: 50px;
    background-size: cover;
    border-radius: 50%;
}



.left-div {
    flex-shrink: 0;
    width: 100%;
    border-radius: 13px;
    margin-top: 15px;
    padding: 20px;
    backdrop-filter: blur(var(--card_filter));
    -webkit-backdrop-filter: blur(var(--card_filter));
    background: var(--item_bg_color);
}

.left-des {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.left-des-item {
    display: flex;
    align-items: center;
    line-height: 20px;
    font-size: 15px;
    margin-bottom: 5px;
    overflow: hidden;
}

.left-des-item i,.left-des-item svg{
    width: 16px;
    height: 16px;
    fill:var(--fill);
   font-size: 18px;
    margin-right: 10px;
}
.left-tag {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 14px;
}

.left-tag-item {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 28px;
    margin: 0px 5px 5px 0;
    padding: 10px;
    font-size: 13px;
    border-radius: 10px;
    background: var(--left_tag_item);
}

#line {
    width: 100%;
    height: 200px;
    font-size: 13px;
    padding-left: 8px;
    scroll-snap-type: y mandatory;
    overflow-y: scroll;
}

#line li {
    list-style: none;
    position: relative;
    padding: 15px 0px 0px 15px;
    border-left: 2px solid #d5d5d5;
    border-radius: 0;
    scroll-snap-align: end;
    color: var(--main_text_color);
}



.focus {
    width: 8px;
    height: 8px;
    border-radius: 22px;
    background-color: rgb(255 255 255);
    border: 2px solid #fff;
    position: absolute;
    left: -5px;
    top: 50%;
}

#line li:first-child .focus:first-child {
    background-color: #aaffcd;
    animation: focus 1.8s ease infinite;
}

#line::-webkit-scrollbar {
    display: none;
}



.mica-right {
    width: calc(100% - 230px);
    display: flex;
    padding: 20px;
  position: relative;
    padding-bottom: 50px;
    flex-direction: column;
}
.welcome {

    font-size: 65px;
    font-weight: 800;
    margin: 20px 0;
}

.index-logo {
    flex-shrink: 0;
    width: 40%;
    margin-top: 30px;
    position: relative;
    max-width: 200px;
    aspect-ratio: 1/1;
    background-size: cover;
    border-radius: 50%;
    border: 0.5px solid #ffffff;
}
.description {

    font-size: 20px;
    margin-top: 7px;
}



.gradientText {

    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-size: 200%;
    background-position: 0%;
    font-family: "title";
    animation: backgroundSizeAnimation 10s ease-in-out infinite;
      background-image:  var(--gradient);
}

@keyframes backgroundSizeAnimation {
    0% {
        background-position: 100%;
    }

    25% {
        background-position: 50%;
    }

    50% {
        background-position: 0%;
    }

    75% {
        background-position: 50%;
    }

    100% {
        background-position: 100%;
    }

}

.purpleText {
    color: var(--purple_text_color);
    font-weight: 800;
}

.textBackground {
    font-weight: 800;
    background: var(--text_bg_color);
    border-radius: 5px;
    font-size: 17px;
    margin: 0 3px;
    padding: 2px 4px;
}

.iconContainer {
    width: 100%;
    height: 60px;
    display: flex;
    align-items: center;
    overflow-x: scroll;
    margin-top: 20px;

}

.iconContainer::-webkit-scrollbar {
    display: none;
}



.iconItem {
    width: 49px;
    height: 43px;
    box-sizing: border-box;
    border-radius: 7px;
    display: flex;
    margin-left: 10px;

    backdrop-filter: blur(var(--card_filter));
    -webkit-backdrop-filter: blur(var(--card_filter));
    background: var(--item_bg_color);
    align-items: center;
    justify-content: center;
    transition: width 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
    flex-shrink: 0;
}
.iconItem i,.iconItem svg{
    width: 22px;
    height: 22px;
    fill:var(--fill);
    font-size: 22px;
     margin-right: 3px;
}
/* ... */

